# bolid_task

./: README.md  condition.txt
analysis/: CMakeLists.txt  variants.txt
analysis/src/: main.cpp
solution/: CMakeLists.txt  a.out  build.sh  main.cpp
solution/include/: client.hpp  multithreading.hpp  socket.hpp  time.hpp  url_parser.hpp
solution/src/: main.cpp
solution/test_directory/: test_file_with_urls.txt
